--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Vue.js Vite Example</title>
-    <meta content="initial-scale=1.0, width=device-width" name="viewport">
+    <meta charset="utf-8" />
+    <title>Victor's Pokeindex</title>
+    <meta content="initial-scale=1.0, width=device-width" name="viewport" />
     
-    <link rel="icon" type="image/png" sizes="196x196" href="/assets/favicon-196.2bcbdde0.png">
-    <link rel="apple-touch-icon" href="/assets/apple-icon-180.82ffcda0.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" type="image/png" sizes="196x196" href="/favicon-196.png" />
+    <link rel="apple-touch-icon" href="/assets/apple-icon-180.82ffcda0.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <script type="module" crossorigin src="/assets/index.f76b5bad.js"></script>
     <link rel="modulepreload" href="/assets/vendor.58eaeda0.js">
     <link rel="stylesheet" href="/assets/index.adf23233.css">
   <link rel="manifest" href="/manifest.webmanifest"></head>
-  <body style="
+  <body
+    style="
       background-image: linear-gradient(
         43deg,
         #4158d0 0%,
@@ -20,7 +21,8 @@
         #ffcc70 100%
       );
       min-height: 100vh;
-    ">
+    "
+  >
     <div id="app"></div>
     
   </body>
